[gd_scene load_steps=7 format=3 uid="uid://4bt3ndfyg5jf"]

[ext_resource type="PackedScene" uid="uid://bgbkco32lhejv" path="res://ui/title/background.tscn" id="2_evy4p"]
[ext_resource type="Script" path="res://ui/pause/pause_menu.gd" id="2_lkj2s"]
[ext_resource type="PackedScene" uid="uid://bt1njt15eesor" path="res://ui/components/game_title_heading.tscn" id="3_48pxe"]
[ext_resource type="Script" path="res://ui/pause/paused_label.gd" id="4_kxpae"]
[ext_resource type="PackedScene" uid="uid://b0426023cyp6a" path="res://ui/title/options_button/options_button.tscn" id="5_2jfyi"]
[ext_resource type="PackedScene" uid="uid://btys1uystjl0u" path="res://ui/title/quit_button/quit_button.tscn" id="5_jbu0r"]

[node name="PauseMenu" type="Control" groups=["blocking"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_lkj2s")

[node name="Background" parent="." instance=ExtResource("2_evy4p")]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginTitleMenu"

[node name="H" type="HBoxContainer" parent="M"]
layout_mode = 2

[node name="Spacer" type="Control" parent="M/H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="V" type="VBoxContainer" parent="M/H"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GameTitleHeading" parent="M/H/V" instance=ExtResource("3_48pxe")]
layout_mode = 2

[node name="VSpacerExpand" type="TextureRect" parent="M/H/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="M" type="MarginContainer" parent="M/H/V"]
layout_mode = 2

[node name="PausedLabel" type="Label" parent="M/H/V/M"]
layout_mode = 2
text = "- Paused -"
horizontal_alignment = 1
script = ExtResource("4_kxpae")

[node name="VSpacerExpand2" type="TextureRect" parent="M/H/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="M/H/V"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 2

[node name="Resume" type="Button" parent="M/H/V/Buttons"]
layout_mode = 2
text = "Resume"

[node name="H2" type="HBoxContainer" parent="M/H/V/Buttons"]
layout_mode = 2

[node name="Save" type="Button" parent="M/H/V/Buttons/H2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Save"

[node name="Load" type="Button" parent="M/H/V/Buttons/H2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="OptionsButton" parent="M/H/V/Buttons" instance=ExtResource("5_2jfyi")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/H/V/Buttons"]
layout_mode = 2

[node name="QuitToTitle" type="Button" parent="M/H/V/Buttons/H"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Back to Title"

[node name="QuitToDesktop" parent="M/H/V/Buttons/H" instance=ExtResource("5_jbu0r")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="M/H/V/Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="M/H/V/Buttons/H2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="M/H/V/Buttons/H2/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="M/H/V/Buttons/H/QuitToTitle" to="." method="_on_quit_to_title_pressed"]
